<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">RecolectAR_APP</string>
    <string name="title_activity_recorrido_conductor">Map</string>
    <string name="title_activity_map_conductor">Map</string>
    <string name="login_text">Login</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="text_usuarios">Usuarios</string>
    <string name="agregar_usuarios">Agregar nuevo usuario</string>
    <string name="login_button">Login</string>
    <string name="mis_datos">Mis datos</string>
    <string name="img_company">Dashboard page</string>
    <string name="logo">Logo</string>
    <string name="title_activity_admin">AdminActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="title_activity_camiones">CamionesActivity</string>
    <!--Para Botones-->

    <string name="deslogearse">Deslogearse</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_remove">Remove</string>
    <!--Para ABM Contenedores-->
    <string-array name="estados_contenedor">
        <item>Proyectado</item>
        <item>Instalado</item>
        <item>EnServicio</item>
        <item>En Reparación</item>
        <item>Dado De Baja</item>
    </string-array>
    <string-array name="tipos_residuos">
        <item>Sólidos Urbanos</item>
        <item>Orgánicos</item>
        <item>Inorgánicos</item>
        <item>Manejo Especial</item>
    </string-array>
    <string name="label_codigo_contenedor">Contenedor n°:</string>
    <string name="label_tipo_contenedor">Tipo:</string>
    <string name="label_estado_contenedor">Estado:</string>
    <string name="label_latitud_contenedor">Latitud:</string>
    <string name="label_longitud_contenedor">Longitud:</string>
    <string name="label_temperatura_contenedor">Temperatura:</string>
    <string name="label_ruta_contenedor">Ruta:</string>
    <string name="label_camion_contenedor">Camion:</string>
    <string name="label_zona_contenedor">Zona:</string>
    <string name="label_ultima_visita_contenedor">Ultima visita:</string>
    <string name="label_proxima_visita_contenedor">Proxima visita:</string>
    <string name="label_llenado_contenedor">Llenado:</string>
    <!--Para Card Item Camion-->
    <string name="label_card_ID_camion">Camión N°:  </string>
    <string name="label_card_Patente_camion">Patente:  </string>
    <string name="label_card_Estado_camion">Estado:  </string>
    <!--Para Card Item Contenedor-->
    <string name="label_card_ID_contenedor">Contenedor N°:  </string>
    <string name="label_card_Tipo_contenedor">Tipo:  </string>
    <string name="label_card_Zona_contenedor">Zona:  </string>
    <string name="label_card_Llenado_contenedor">Llenado:  </string>
    <!--Para ABM Camiones -->
    <string name="label_Id_camion">ID</string>
    <string name="label_patente_camion">Patente</string>
    <string name="label_tipo_camion">Tipo</string>
    <string name="label_estado_camion">Estado</string>
    <string name="label_empleado_camion">Empleado</string>
    <string name="label_zona_camion">Zona</string>
    <string name="label_latitud_camion">Latitud</string>
    <string name="label_longitud_camion">Longitud</string>
    <string name="label_carga_camion">Carga</string>
    <string name="btn_agregar">Agregar</string>
    <string name="configuration">Configuration</string>
    <string-array name="estados_camion">
        <item>Estacionado</item>
        <item>En Ruta</item>
        <item>En Reparación</item>
        <item>Fuera de Servicio</item>
    </string-array>
    <!--Para ABM Zonas -->
    <string name="label_id_zona">Zona n°:</string>
    <string name="label_contenedores_zona">Contenedores:</string>
    <string name="label_refVehicle_zona">Camion:</string>
    <string name="label_nombre_zona">Nombre:</string>
    <!--Para Configuration-->
    <string name="lbl_Umbral_Default">Umbral Default</string>
    <string name="txt_Umbral_Defautl">0.60</string>
    <string name="lbl_Umbral_Minimo">Umbral Mínimo</string>

</resources>