<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_package_item_camion"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:backgroundTintMode="add"
    app:cardCornerRadius="20dp"
    app:cardElevation="8dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?selectableItemBackground">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Media -->
        <!-- Title, secondary and supporting text -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp">
            <TextView
                android:id="@+id/lbl_id_item_camion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_card_ID_camion"
                android:textAppearance="?attr/textAppearanceHeadline6" />
            <TextView
                android:id="@+id/txt_id_item_camion"
                android:layout_marginLeft="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceHeadline6" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="15dp">
            <TextView
                android:id="@+id/lbl_patente_item_camion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_card_Patente_camion"
                android:layout_marginTop="8dp"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary" />
            <TextView
                android:id="@+id/txt_patente_item_camion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="12dp"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="20dp">
            <TextView
                android:id="@+id/lbl_estado_item_camion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_card_Estado_camion"
                android:layout_marginTop="16dp"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary" />
            <TextView
                android:id="@+id/txt_estado_item_camion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="12dp"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary" />

        </LinearLayout>


    </LinearLayout>

    <!-- Buttons -->

</androidx.cardview.widget.CardView>